--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
