--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "client": "cd ../client && npm start",
+    "server": "nodemon index.js",
+    "start" : "concurrently \"npm run server\"  \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,5 +18,8 @@
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1"
   }
 }
